istio/manifests/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: ping
  labels:
    istio-injection: enabled
---
## Ping Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  namespace: ping
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
        - name: ping
          image: tstrohmeier/alpine-infinite-curl
          args:
            - -h
            - http://httpbin.internal/ip
---
## HTTP Service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - image: docker.io/kennethreitz/httpbin
          name: httpbin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: httpbin
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: httpbin
spec:
  hosts:
    - foo.io
    - httpbin.internal
  http:
    - route:
      - destination:
          host: httpbin
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: httpbin
  namespace: httpbin
spec:
  hosts:
    - httpbin.internal
  location: MESH_INTERNAL
  address:
    - httpbin.httpbin.svc.cluster.local
  resolution: DNS
  ports:
    - number: 80
      name: http1
      protocol: HTTP
  endpoints:
    - address: httpbin.internal
      ports:
        http1: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
  namespace: httpbin
spec:
  host: httpbin.httpbin.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
